dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/tractorgen.c)
AM_INIT_AUTOMAKE(tractorgen, 0.31.7)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_MSG_CHECKING(that you're completely fent)
AC_MSG_RESULT(yes)

AC_OUTPUT([
Makefile
src/Makefile
])

